docs/errors/examples/unknown-plugin/unknown-plugin.grob
// E3001 — importing a plugin that is not known to any configured registry
import Grob.Foo

foo.greet("world")
